--- a/client/pageStuff/page.css
+++ b/client/pageStuff/page.css
@@ -7,8 +7,8 @@
 	color: #fff;
 	cursor:pointer;
 	margin:10px;
-    text-align: center;
-    vertical-align:middle;
+	text-align: center;
+	vertical-align:middle;
 	border-radius: 10%;
 }
 .css-page-choise-not-ready {
@@ -21,5 +21,7 @@
 	text-decoration: none;
 	font-style: oblique;
 	color: #921;
-	
+}
+#add-param-btn {
+	left:80%;
 }
