--- a/client/main.css
+++ b/client/main.css
@@ -1,3 +1,13 @@
+.css-black-bg {
+	position: fixed;
+	background-color: #000;
+	top: 0px;
+	left: 0px;
+	width: 100%;
+	height: 100%;
+	z-index:-1;
+/* 	background-color: #8e7cc3; */
+}
 .css-adding-btn {
 	position: fixed;
 	top: 90%;
