--- a/client/nav.css
+++ b/client/nav.css
@@ -1,18 +1,18 @@
-body {
-	background-color: #000;
-/* 	background-color: #8e7cc3; */
-}
-.css-nav {
-	margin-top: 20px;
-	margin-right: 30px;
-	border:1px solid green;
-	color:#000;
+.css-plain-nav {
+/* 	margin-top: 20px; */
+/* 	margin-right: 30px; */
+/* 	border:1px solid green; */
+	color: #266;
 /* 	z-index:5; */
 }
-.css-nav a {
+.css-plain-nav a {
 	text-decoration: none;
-	color:black;
-	margin: auto;
+/* 	color:black; */
+/* 	margin: auto; */
 /* 	color: #fff2cc; */
-	color: #2cc;
+	color: #266;
+}
+.dropdown-menu {
+/* 	border:1px solid green; */
+	color: #000;
 }
