--- a/client/worldStuff/world.css
+++ b/client/worldStuff/world.css
@@ -1,10 +1,16 @@
 .css-the-worlds {
-	width: 80%;
+/* 	position: fixed; */
+/* 	width: 80%; */
+/* 	top: 0px; */
+/* 	height:100%; */
+/* 	margin:auto; */
+	margin-top: -100px;
 	background-color: #8e7cc3;
+	z-index:-1;
 }
 .css-the-world-list {
 /* 	border: 3px solid red; */
-	margin-top: 50px;
+	margin-top: 150px;
 }
 /* .css-world { */
 /* 	position: relative; */
@@ -13,7 +19,7 @@
 /* 	width: calc(100% / 6); */
 /* 	border:1px solid white; */
 /* } */
-#wholeBG {
+.wholeBG {
 	position: fixed;
 	top: 0px;
 	left: 0px;
@@ -21,7 +27,7 @@
 	width:100%;
 	z-index:-1;
 }
-#wholeBG a {
+.wholeBG a {
 	text-decoration: none;
 	color:black;
 }
