Fixed Vis for timeline and network

--- a/client/pageBodyStuff/pageBody.css
+++ b/client/pageBodyStuff/pageBody.css
@@ -29,9 +29,14 @@
 .css-body-time {
 	text-align:right;
 	float:right;
+	top: 0px;
+    margin-top: 10px;
+
+/* 	margin-bottom: 30px; */
 }
 .css-editable-time {
-	position: relative;
+/* 	position: relative; */
 	width: 40px;
 	height: 30px;
+/* 	margin-bottom: 30px; */
 }
